--- a/Views/Receipt/UserReceipts.cshtml
+++ b/Views/Receipt/UserReceipts.cshtml
@@ -1,4 +1,8 @@
-﻿@model IEnumerable<Receipt>
+﻿<!--
+Principle Author: Richard Perocho
+This view displays a list of the user's receipts
+-->
+@model IEnumerable<Receipt>
 @{
     ViewData["Title"] = "User Receipts";
     Layout = "_formLayout";
