--- a/Views/ResetPassword/CheckEmailForm.cshtml
+++ b/Views/ResetPassword/CheckEmailForm.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿<!--
+Principle Author: Richard Perocho
+This view is for email verification when user forgets password
+-->
 @{
     ViewData["Title"] = "CheckEmailForm";
     Layout = "_formLayout";
