--- a/Views/ResetPassword/ResetPasswordForm.cshtml
+++ b/Views/ResetPassword/ResetPasswordForm.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿<!--
+Principle Author: Richard Perocho
+This view handles resetting password when user forgets password
+-->
 @{
     ViewData["Title"] = "ResetPasswordForm";
     Layout = "_formLayout";
