--- a/Views/Signin/loginForm.cshtml
+++ b/Views/Signin/loginForm.cshtml
@@ -1,4 +1,8 @@
-﻿@model Credentials
+﻿<!--
+Principle Author: Richard Perocho
+This view is the form for user login
+-->
+@model Credentials
 @{
     ViewData["Title"] = "signin";
     Layout = "_formLayout";
