--- a/Views/Signup/signupForm.cshtml
+++ b/Views/Signup/signupForm.cshtml
@@ -1,4 +1,8 @@
-﻿@model SignupModel
+﻿<!--
+Principle Author: Richard Perocho
+This view is the form for user signup
+-->
+@model SignupModel
 @{
     ViewData["Title"] = "signup";
     Layout = "_formLayout";
