--- a/Views/ResetPassword/SecurityQuestionForm.cshtml
+++ b/Views/ResetPassword/SecurityQuestionForm.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿<!--
+Principle Author: Richard Perocho
+This view handles validation the security question / answer when user forgets password
+-->
 @{
     ViewData["Title"] = "SecurityQuestionForm";
     Layout = "_formLayout";
