Final Commit Spell Checking

--- a/Views/Stats/index.cshtml
+++ b/Views/Stats/index.cshtml
@@ -1,4 +1,8 @@
-﻿@model GraphForm
+﻿<!--
+Principle author Adrian    
+-->
+
+@model GraphForm
 @{
     ViewData["Title"] = "statistics";
     Layout = "_Layout";
